# Theo-Fish

./: .gitignore  CLAUDE.md  LICENSE  README.md  data_module.md  docker-compose.yml  kg-dual-graph.md  main.py  papers.csv  pyproject.toml
data_cleaner/: __init__.py  __main__.py  cli.py  config.py  errors.py  logger.py  metadata_repairer.py  models.py  pipeline.py
data_loader/: README.md  __init__.py  __main__.py  api.py  cli.py  config.py  errors.py  input_reader.py  job_store.py  json_writer.py  logger.py  metadata_fetcher.py  models.py  orchestrator.py  paper_converter.py  sdk.py
graph_builder/: __init__.py  __main__.py
graph_builder_v1/: __init__.py  __main__.py  cli.py  config.py  entity_extractor.py  errors.py  llm_client.py  logger.py  models.py  orchestrator.py  prompts.py  relationship_mapper.py  sdk.py  section_splitter.py  vault_scanner.py  vault_writer.py
tests/: conftest.py  test_api.py  test_artifact_remover.py  test_batch_processor.py  test_body_renderer.py  test_claim_extractor.py  test_claim_model.py  test_claim_verifier.py  test_claude_client.py  test_cleaner_cli.py  test_cleaner_models.py  test_concept_extractor.py  test_concept_merger.py  test_concept_model.py  test_cross_section_linker.py  test_dedup_cascade.py  test_e2e_smoke.py  test_edge_enricher.py  test_edges_model.py  test_embedding_client.py  test_errors.py  test_frontmatter_builder.py  test_fuzzy_matcher.py  test_golden_paper.py  test_graph_builder_v2_errors.py  test_graph_reader.py  test_graph_writer.py  test_heading_normalizer.py  test_input_reader.py  test_job_store.py  (+35 more)
(+2247 files in other folders)
